--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "crypto": "^1.0.1",
     "express": "^4.18.2"
